@@ -54,14 +54,32 @@ gh repo clone conorraftery/HotelIMS
 
 ## How to Run the Application
 
-1. Open IntelliJ IDEA.
-2. Go to File > Open and select the room-manager-fx project folder.
-3. Make sure JavaFX is installed and added to your project.  
-   Go to File > Project Structure > Libraries and add the JavaFX SDK if it's not already there.
-4. Set up VM options:  
-   Go to Run > Edit Configurations > VM options and paste the following (update path to your own JavaFX SDK):
+### System Requirements
+- Java 17 or higher
+- JavaFX SDK (version compatible with Java 17)
+- IntelliJ IDEA (Community or Ultimate)
+- SceneBuilder (for editing the .fxml UI files)
 
-The main class of this JavaFX application is HotelApp, which initializes the GUI and launches the hotel inventory system.
+### Setup Instructions
+
+1. Download and install [SceneBuilder](https://gluonhq.com/products/scene-builder/).
+2. Download and install [JavaFX SDK](https://gluonhq.com/products/javafx/), and unzip it to a known location.
+3. Open IntelliJ IDEA.
+4. Select **File > Open**, then choose the root project folder (HotelIMS).
+5. Go to **File > Project Structure > Libraries**, click the `+` icon, and add the `lib` folder from the unzipped JavaFX SDK.
+6. Go to **File > Settings (or Preferences on Mac) > Languages & Frameworks > JavaFX**, and under "SceneBuilder path", link it to your downloaded SceneBuilder app.
+
+### VM Options (Required for JavaFX)
+1. Go to **Run > Edit Configurations > VM Options** and paste the following (update the path as needed for your local system):
+--module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml
+
+### Running the Application
+1. In the `hotel` package, right-click `HotelApp.java` and select **Run**.
+2. This will launch the Hotel Inventory Management System GUI and allow interaction with features such as:
+- Guest entry
+- Room assignment
+- Room availability search
+
 
 ## Authors
 
